# MongoDB-RAG-Agent

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  DOCKER_OPTIMIZATION.md  DOCKER_OPTIMIZATION_RESULTS.md  Dockerfile  README.md  backend-logs.txt  build-backend.ps1  build.ps1  build.sh  check-airbyte.ps1  docker-compose.airbyte.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  mongo-logs.txt  openapi.json  profiles.yaml  pyproject.toml  requirements.txt  setup-cloudflare-tunnel.ps1  start-airbyte-fixed.ps1  start-airbyte.ps1  start.ps1
.claude/: PRD.md
.qoder/: rules.md
backend/: Dockerfile  Dockerfile.base  Dockerfile.fast  Dockerfile.ml-heavy  Dockerfile.simple  Dockerfile.worker  __init__.py  main.py  requirements-api.txt  requirements-ml-heavy.txt  requirements.txt
data/: .gitignore
docs/: DOCUMENTATION_COVERAGE.md  PROJECT_DOCUMENTATION.md  RESPONSE_QUALITY_IMPROVEMENTS.md  SYSTEM_BLUEPRINTS.md  SYSTEM_BLUEPRINTS_DE.md  airbyte-deployment-solution-summary.md  airbyte-troubleshooting-guide.md  docker-build-guide.md
frontend/: .dockerignore  Dockerfile  QOL_IMPLEMENTATION_PLAN.md  coverage-run.txt  index.html  insert-handler.js  nginx.conf  nginx.main.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
ingestion/: behovavonahora.lnk  parhelion.energy.lnk
scripts/: airbyte-monitor.py  cloudflared-watchdog.ps1  configure-cloudflared-service.ps1  create-tunnel-task-direct.ps1  create-tunnel-task-simple.ps1  create_admin.py  docker-entrypoint.sh  (+6 more)
(+201 files in other folders)
